--- a/bbc.css
+++ b/bbc.css
@@ -153,3 +153,142 @@ h1{
 #menu-bar-2 a:hover{
     text-decoration: underline;
 }
+
+.no-border{
+    border: none !important;
+}
+
+#down-arrow{
+    height: 10px;
+    position: relative;
+    top: 10px;
+}
+
+#page-container{
+    width: 1000px;
+    margin: 0 auto;
+}
+
+h2{
+    font-weight: normal;
+    margin-top: 40px;
+    font-size: 20px;
+    border-bottom: 2px solid #a91717;
+    width: 105px;
+}
+
+h3 a {
+    color: black;
+    font-size: 30px;
+    text-decoration: none;
+
+}
+
+h3 a:hover{
+    color: #1167a8;
+}
+
+#article-summary{
+    color: #5a5a5a;
+    width: 250px;
+    float: left;
+}
+
+.clock{
+    height: 15px;
+    position: relative;
+    top: 2px;
+    right: 5px;
+}
+
+.topic-link{
+    text-decoration: none;
+    color: #a91717;
+    border-left: 1px solid #cccccc;
+    padding-left: 10px;
+}
+
+#article-summary a:hover{
+    color: #1167a8;
+}
+
+.date{
+    padding-right: 10px;
+    color: #5a5a5a;
+}
+
+#article-container{
+    float: left;
+    width: 650px;
+    border-right: 1px solid #cccccc;
+    padding-right: 20px;
+}
+
+#main-article-image{
+    width: 380px;
+    margin-left: 20px;
+}
+
+#article-hr{
+    border-top:1px solid #a91717;
+    width: 50px;
+}
+
+.article-link{
+    color: black;
+    text-decoration: none;
+}
+
+#watch-listen{
+    margin-left: 10px;
+    width: 310px;
+    float: right;
+    position: relative;
+    top: -25px;
+
+}
+
+h4{
+    font-weight: normal;
+    font-size: 20px;
+
+}
+
+.article-side-image{
+    float: left;
+    width: 90px;
+    margin-right: 5px;
+}
+
+.watch-listen-link{
+    text-decoration: none;
+    color: black;
+    font-weight: bold;
+    font-size: 18px;
+}
+
+.watch-listen-link:hover{
+    color: #1167a8;
+}
+
+.side-article{
+    float: right;
+    width: 215px;
+    position: relative;
+    top: -18px;
+}
+
+.no-border{
+    border-left: none;
+    padding: 0px;
+}
+
+.border-right{
+    border-right: 1px solid #cccccc;
+}
+
+.side-article-date{
+    position: relative;
+    top: -15px;
+}
+
